loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:5: error: not found: value foward
  foward(8);
  ^