loopfor.LoopCourse.scala.code
var goal = 10 ;
var a = 0 ;

def run() {
  foward(8);
  left();
}
def circle() {
  for (a <- 0 to 3){
    run();
  }
}
circle()